2010-03-24  MORITA Hajime  <morrita@google.com>

Reviewed by Darin Adler.

        Refactoring: HTMLFormControlElement should not have redundant null check
        https://bugs.webkit.org/show_bug.cgi?id=36487

        No new tests as there is no new functionality.

        * html/HTMLFormControlElement.cpp:
        (WebCore::HTMLFormControlElement::dispatchFocusEvent):
        (WebCore::HTMLFormControlElement::dispatchBlurEvent):

Canonical link: https://commits.webkit.org/47757@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@56463 268f45cc-cd09-0410-ab3c-d52691b4dbfc